[package]
name = "gateway-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid", "bigdecimal"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
nanoid = "0.4"

# Decimal arithmetic
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Tokio signal handling
signal-hook = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Bytes for streaming
bytes = "1"

# Regex
regex = "1"

# Lazy static initialization
once_cell = "1"

# Tokenizer
tiktoken-rs = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
